--- a/src/pug/page/index.pug
+++ b/src/pug/page/index.pug
@@ -3,10 +3,9 @@ extends /layout/_default-layout
 prepend config-block
   - page_name = ''
 
-//- append stylesheet-block
+append stylesheet-block
 
-//- append javascript-block
+append javascript-block
 
 block content-block
-  .sample-icon
-  | hello, world!
+  canvas.canvas
